# EScript

./: .travis.yml  AUTHORS  CMakeLists.txt  EScript.ekki  EScriptConfig.cmake.in  EScriptConfigVersion.cmake.in  LICENSE  README.md  appveyor.yml
EScript/: Basics.h  CMakeLists.txt  Consts.cpp  Consts.h  EScript.cpp  EScript.h  Helper.cpp  Helper.h  Object.cpp  Object.h  StdFactories.cpp  StdFactories.h  StdObjects.h  Version.h  main.cpp
EScript/Compiler/: Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  FnCompileContext.cpp  FnCompileContext.h  Operators.cpp  Operators.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  VariableTypes.h
EScript/Compiler/AST/: ASTNode.h  AnnotatedStatement.h  Block.h  BlockExpr.h  ConditionalExpr.h  ControlStatements.h  FunctionCallExpr.h  GetAttributeExpr.h  IfStatement.h  LogicOpExpr.h  LoopStatement.h  SetAttributeExpr.h  Statement.h  SwitchCaseStatement.h  TryCatchStatement.h  UserFunctionExpr.cpp  UserFunctionExpr.h  ValueExpr.h
EScript/Expressions/: Block.cpp  Block.h  ConditionalExpr.cpp  ConditionalExpr.h  FunctionCall.cpp  GetAttribute.cpp  GetAttribute.h  Identifier.cpp  IfControl.cpp  IfControl.h  SetAttribute.cpp  SetAttribute.h  Statement.cpp  Statement.h
EScript/Instructions/: Instruction.cpp  Instruction.h  InstructionBlock.cpp  InstructionBlock.h
EScript/Objects/: Array.cpp  Array.h  Bool.cpp  Bool.h  Collection.cpp  Collection.h  Delegate.cpp  Delegate.h  Exception.cpp  Exception.h  ExtObject.cpp  ExtObject.h  ExtReferenceObject.h  Function.cpp  Function.h  Identifier.cpp  Identifier.h  Iterator.cpp  Iterator.h  Map.cpp  Map.h  Namespace.cpp  Namespace.h  Number.cpp  Number.h  NumberRef.cpp  NumberRef.h  Object.cpp  Object.h  ReferenceObject.cpp  ReferenceObject.h  Script.cpp  Script.h  String.cpp  String.h  Type.cpp  Type.h  UserFunction.cpp  UserFunction.h  Void.cpp  (+4 more)
EScript/Objects/AST/: ASTNode.h  Block.h  BlockExpr.cpp  BlockExpr.h  BlockStatement.cpp  BlockStatement.h  ConditionalExpr.cpp  ConditionalExpr.h  ControlStatements.h  ForeachStatement.cpp  ForeachStatement.h  FunctionCall.h  FunctionCallExpr.cpp  FunctionCallExpr.h  GetAttribute.cpp  GetAttribute.h  GetAttributeExpr.cpp  GetAttributeExpr.h  IfControl.cpp  IfControl.h  IfStatement.cpp  IfStatement.h  LogicOp.cpp  LogicOpExpr.cpp  LogicOpExpr.h  LoopExpression.h  LoopStatement.cpp  LoopStatement.h  SetAttribute.cpp  SetAttributeExpr.cpp  SetAttributeExpr.h  Statement.cpp  Statement.h  TryCatchStatement.cpp  TryCatchStatement.h  UserFunctionExpr.cpp  UserFunctionExpr.h
EScript/Objects/Callables/: Delegate.cpp  Delegate.h  FnBinder.cpp  FnBinder.h  Function.cpp  Function.h  UserFunction.cpp  UserFunction.h
EScript/Objects/Collections/: Array.cpp  Array.h  Collection.cpp  Collection.h  Map.cpp  Map.h
EScript/Objects/Functions/: Delegate.cpp  Delegate.h  Function.cpp  Function.h  UserFunction.cpp  UserFunction.h
EScript/Objects/Internals/: Block.cpp  Block.h  ConditionalExpr.cpp  ConditionalExpr.h  ForeachExpression.cpp  ForeachExpression.h  FunctionCall.cpp  FunctionCall.h  GetAttribute.cpp  GetAttribute.h  IfControl.cpp  IfControl.h  Instruction.cpp  Instruction.h  LogicOp.cpp  LogicOp.h  LoopExpression.cpp  SetAttribute.cpp  SetAttribute.h  Statement.cpp  Statement.h
EScript/Objects/Streams/: StreamBase.cpp  StreamBase.h
EScript/Objects/Values/: Bool.cpp  Bool.h  Number.cpp  Number.h  NumberRef.cpp  NumberRef.h  String.cpp  String.h  Void.cpp  Void.h
EScript/Parser/: Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  InstructionBlock.cpp  InstructionBlock.h  Operators.cpp  Operators.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
EScript/Parser/AST/: BlockExpr.h  GetAttributeExpr.h  LogicOpExpr.h  SetAttributeExpr.h  UserFunctionExpr.h  ValueExpr.h
EScript/Runtime/: FunctionCallContext.cpp  FunctionCallContext.h  RtValue.cpp  RtValue.h  Runtime.cpp  Runtime.h  RuntimeBlock.cpp  RuntimeBlock.h  RuntimeContext.cpp  RuntimeContext.h  RuntimeInternals.cpp  RuntimeInternals.h
EScript/Statements/: Block.cpp  Block.h  ForControl.cpp  ForControl.h  ForeachControl.cpp  ForeachControl.h  FunctionCall.cpp  FunctionCall.h  GetAttribute.cpp  GetAttribute.h  Identifier.cpp  Identifier.h  IfControl.cpp  IfControl.h  LogicOp.cpp  LogicOp.h  SetAttribute.cpp  SetAttribute.h  StateChangeControl.cpp  StateChangeControl.h  TryCatchControl.cpp  TryCatchControl.h  WhileControl.cpp  WhileControl.h
EScript/Utils/: Attribute.h  AttributeContainer.cpp  AttributeContainer.h  CodeFragment.h  ConversionBasics.cpp  ConversionBasics.h  Debug.cpp  Debug.h  DeclarationHelper.cpp  DeclarationHelper.h  DeprecatedMacros.h  EReferenceCounter.cpp  EReferenceCounter.h  FileUtils.cpp  FileUtils.h  HashMap.h  Hashing.cpp  Hashing.h  Helper.cpp  Helper.h  LocalVarMap.cpp  LocalVarMap.h  Logger.cpp  Logger.h  Macros.h  ObjArray.h  ObjRef.cpp  ObjRef.h  RuntimeHelper.cpp  RuntimeHelper.h  StdConversions.cpp  StdConversions.h  StdFactories.cpp  StdFactories.h  StringData.cpp  StringData.h  StringId.h  StringUtils.cpp  StringUtils.h  TypeNameMacro.h  (+1 more)
EScript/Utils/IO/: AbstractFileSystemHandler.h  DefaultFileSystemHandler.cpp  DefaultFileSystemHandler.h  IO.cpp  IO.h  IOBase.h
EScript/Utils/IO/ext/: dirent.h
EScript/Utils/ext/: dirent.h
E_Libs/: IOLib.cpp  IOLib.h  MathLib.cpp  MathLib.h  StdLib.cpp  StdLib.h  Win32Lib.cpp  Win32Lib.h
Std/: DataWrapper.escript  DataWrapperContainer.escript  JSONDataStore.escript  MultiProcedure.escript  ObjectSerialization.escript  PriorityQueue.escript  Set.escript  StdNamespace.escript  TypeExtensions.escript  _module  _module.escript  addRevocably.escript  basics.escript  complete.escript  coroutine.escript  declareNamespace.escript  (+4 more)
tests/: AddHeader.escript  BUG20110616.escript  Bugs.escript  CMakeLists.txt  Experiments.escript  IOLib.escript  Testcases_Core.escript  Testcases_IOLib.escript  Testcases_MathLib.escript  Testcases_Runtime.escript  Testcases_StdLib.escript  Testcases_Win32Lib.escript  Win32Lib.escript  loadme.escript  test.cpp  test.escript
(+21 files in other folders)
